// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea should render the textarea 1`] = `
<div
  class="class-for-wrapper"
>
  <textarea
    class="textarea"
    id="textarea-1"
    name="textarea-1"
  />
</div>
`;

exports[`TextArea should render the textarea disabled 1`] = `
<div
  class="class-for-wrapper"
>
  <textarea
    class="textarea"
    disabled=""
    id="textarea-2"
    name="textarea-2"
  />
</div>
`;

exports[`TextArea should render the textarea required 1`] = `
<div
  class="class-for-wrapper"
>
  <textarea
    class="textarea"
    id="textarea-3"
    name="textarea-3"
    required=""
  />
</div>
`;

exports[`TextArea should render the textarea with caption 1`] = `
<div
  class="class-for-wrapper"
>
  <textarea
    aria-describedby="textarea-5-caption"
    class="textarea"
    id="textarea-5"
    name="textarea-5"
  />
  <div
    class="caption"
    id="textarea-5-caption"
  >
    More details...
  </div>
</div>
`;

exports[`TextArea should render the textarea with error 1`] = `
<div
  class="class-for-wrapper"
>
  <textarea
    class="textarea error"
    id="textarea-6"
    name="textarea-6"
  />
  <div
    class="caption error"
    id="textarea-6-caption"
  >
    This textarea is invalid
  </div>
</div>
`;

exports[`TextArea should render the textarea with label 1`] = `
<div
  class="class-for-wrapper"
>
  <label
    class="ui-label-label-3864 label"
    for="textarea-4"
  >
    Label of textarea
  </label>
  <textarea
    class="textarea"
    id="textarea-4"
    name="textarea-4"
  />
</div>
`;
